# CS_Buddy

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.ts
.claude/hooks/: post-edit.sh  stop-smoke.sh
computerResources/Computer-operating-system-notes/: README.md  计算机操作系统(第3版)课后习题答案.md  计算机操作系统（一）——概览.md  (+8 more)
docs/: DEV_PLAN.md  PRD.md  REFACTOR_PLAN.md  SMOKE.md  TDD.md  VERIFICATION_ROADMAP.md  architecture-diagram.html  backend-architecture.md  rag-and-memory-design.md
e2e/: chat.spec.ts  welcome.spec.ts
evals/: .gitignore  README.md  cases.yaml
scripts/: preflight.sh  rag_eval.py  smoke.sh  verify.sh
server/: .env.example  pyproject.toml
server/app/: __init__.py  config.py  main.py
server/app/agent/: graph.py  intent.py  model.py  state.py  tools.py
server/app/agent/skills/: __init__.py  clarify.py  explain.py  quiz.py
server/app/agent/skills/agents/: grader.md
server/app/agent/skills/evals/: evals.json
server/app/agent/skills/scripts/: grade_eval.py  run_eval.py
server/app/db/: collections.py  mongo.py  retrieval_logger.py
server/app/evaluation/: service.py
server/app/learning_path/: service.py
server/app/memory/: event_store.py  service.py
server/app/models/: schemas.py
server/app/notifications/: service.py
server/app/rag/: embeddings.py  loader.py  retriever.py  store.py
server/app/routers/: chat.py  evaluations.py  learning_paths.py  notifications.py  observability.py  profile.py  resources.py
web/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+81 files in other folders)
