[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learnpal-server"
version = "0.1.0"
description = "Phase 1 backend for CS Buddy"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "faiss-cpu",
  "langgraph",
  "langchain-community",
  "langchain",
  "langchain-openai",
  "langchain-core",
  "langchain-text-splitters",
  "pydantic",
  "pydantic-settings",
  "motor",
  "pymongo",
  "python-dotenv",
  "sse-starlette",
  "langfuse",
]
